--- a/app/views/manufacturers/index.html.erb
+++ b/app/views/manufacturers/index.html.erb
@@ -7,3 +7,4 @@
     <h3><%=link_to manufacturer.name, manufacturer_path(manufacturer)%></h3>
   <%end%>
 <%= link_to "Voltar", root_path %>
+<%=link_to "Registrar novo fabricante", new_manufacturer_path%>
