--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -1,7 +1,8 @@
 <h1>Novo Fabricante</h1>
 
 <% if @manufacturer.errors.full_messages.any?%>
-  <p> Não foi possível salvar, verifique os erros abaixo:</p>
+  <!--<p> Não foi possível salvar, verifique os erros abaixo:</p> -->
+  <p> Nome deve ser único </p>
   <%else%>
     <%@manufacturer.errors.full_messages. each do |erro|%>
       <li>erro</li>
