--- a/app/views/manufacturers/edit.html.erb
+++ b/app/views/manufacturers/edit.html.erb
@@ -1,8 +1,4 @@
 <h1>Editar</h1>
 
 
-<%=form_for( @manufacturer, local: true) do |f| %>
-  <%=f.label :name, 'Nome'%>
-  <%=f.text_field (:name) %>
-  <%=f.submit('Enviar')%>
-<% end %>
+<%= render partial: 'form', locals: { manufacture: @manufacture } %>
