--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -1,15 +1,3 @@
 <h1>Novo Fabricante</h1>
 
-<% if @manufacturer.errors.full_messages.any?%>
-  <p> Não foi possível salvar, verifique os erros abaixo:</p>
-  <%@manufacturer.errors.full_messages.each do |erro|%>
-      <p> <%= erro %> </p>
-  <%end%> 
-  <%end%>    
-
-
-<%=form_for( @manufacturer, local: true) do |f| %>
-  <%=f.label :name, 'Nome'%>
-  <%=f.text_field (:name) %>
-  <%=f.submit('Enviar')%>
-<% end %>
+<%= render partial: 'form', locals: { manufacture: @manufacture } %>
