--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,4 +3,5 @@
 
 <p>Bem vindo ao sistema de gestão de locação</p>
 
-<%= link_to 'Fabricantes', manufacturers_path%>
+<%= link_to 'Fabricantes', manufacturers_path %>
+<%= link_to 'Filiais', subsidiaries_path %>
