Editando e vallidando filiais

--- a/app/views/subsidiaries/_form.html.erb
+++ b/app/views/subsidiaries/_form.html.erb
@@ -1,5 +1,5 @@
-<h6>html-form --e--render new</h6>
-<
+<h6>html-form --e--render new --edit</h6>
+
 
 <%if @subsidiary.errors.full_messages.any? %>
   <p>Não foi possível salvar, verifique os erros abaixo: </p>
