--- a/app/views/subsidiaries/index.html.erb
+++ b/app/views/subsidiaries/index.html.erb
@@ -11,5 +11,5 @@
 
 <br> <br>
 <%= link_to "Voltar", root_path %>
-<%= link_to "Cadastrar nova Filial", new_subsidiary_path %>
+<%= link_to "Cadastrar nova filial", new_subsidiary_path %>
 
