--- a/app/views/subsidiaries/show.html.erb
+++ b/app/views/subsidiaries/show.html.erb
@@ -2,4 +2,6 @@
 <p> <%= @subsidiary.name %> </p>
 <p> <%= @subsidiary.cnpj %> </p>
 <p> <%= @subsidiary.address %> </p>
+
 <%=link_to  "Voltar", subsidiaries_path %>
+<%=link_to "Editar", edit_subsidiary_path(@subsidiary)%>
