--- a/app/views/subsidiaries/index.html.erb
+++ b/app/views/subsidiaries/index.html.erb
@@ -2,7 +2,7 @@
 <h1> Filiais </h1>
 
 <%if @subsidiaries.empty?%>
-  <h3>Nenhum fabricante cadastrado</h3>
+  <h3>Nenhuma filial cadastrado</h3>
 <%end%>
 
 <%@subsidiaries.each do |subsidiary|%>
