--- a/app/views/subsidiaries/show.html.erb
+++ b/app/views/subsidiaries/show.html.erb
@@ -3,5 +3,8 @@
 <p> <%= @subsidiary.cnpj %> </p>
 <p> <%= @subsidiary.address %> </p>
 
-<%=link_to  "Voltar", subsidiaries_path %>
+<%=link_to "Voltar", subsidiaries_path %>
 <%=link_to "Editar", edit_subsidiary_path(@subsidiary)%>
+<%=link_to "Apagar filial", @subsidiary,
+              method: :delete,
+              data: { confirm: 'Deseja realmente apagar a filial?' }%>
