--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,3 +6,4 @@
 <%= link_to 'Fabricantes', manufacturers_path %>
 <%= link_to 'Filiais', subsidiaries_path %>
 <%= link_to 'Categorias carros', carcategories_path %>
+<%= link_to 'Clientes', customers_path %>
