--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,3 +7,5 @@
 <%= link_to 'Filiais', subsidiaries_path %>
 <%= link_to 'Categorias carros', carcategories_path %>
 <%= link_to 'Clientes', customers_path %>
+
+<h5> <%= I18n.localize Time.now, format: :long %> </h5>
