--- a/app/views/subsidiaries/show.html.erb
+++ b/app/views/subsidiaries/show.html.erb
@@ -1,7 +1,13 @@
 <h6>HTML show</h6>
-<p> <%= @subsidiary.name %> </p>
-<p> <%= @subsidiary.cnpj %> </p>
-<p> <%= @subsidiary.address %> </p>
+
+<dl>
+  <dt> Nome: </dt>
+  <dd> <%= @subsidiary.name %> </dd>
+  <dt> CNPJ: </dt>
+  <dd> <%= @subsidiary.cnpj %> </dd>
+  <dt> Endereço: </dt>
+  <dd> <%= @subsidiary.address %> </dd>
+</dl>  
 
 <%=link_to "Voltar", subsidiaries_path %>
 <%=link_to "Editar", edit_subsidiary_path(@subsidiary)%>
