--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -8,11 +8,11 @@
   <% end %> 
 
 <%= form_for(@customer , local: true) do |f| %>
-  <%= f.label :name, 'Nome:'%>
+  <%= f.label :name %>
   <%= f.text_field (:name) %>
-  <%= f.label :cpf, 'CPF:'%>
+  <%= f.label :cpf %>
   <%= f.text_field (:cpf) %>
-  <%= f.label :email, 'E-mail:'%>
+  <%= f.label :email%>
   <%= f.text_field (:email) %>
   <%= f.submit('Enviar') %>
 <% end %>
