--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,8 @@
 
 <%= link_to 'Fabricantes', manufacturers_path %>
 <%= link_to 'Filiais', subsidiaries_path %>
-<%= link_to 'Categorias carros', carcategories_path %>
+<%= link_to 'Categorias carros', car_categories_path %>
 <%= link_to 'Clientes', customers_path %>
+<%= link_to'Modelos de Carros', car_models_path%>
 
 <h5> <%= I18n.localize Time.now, format: :long %> </h5>
