--- a/app/views/manufacturers/_form.html.erb
+++ b/app/views/manufacturers/_form.html.erb
@@ -7,7 +7,7 @@
 
 
 <%= form_for( @manufacturer, local: true) do |f| %>
-  <%= f.label :name, 'Nome' %>
-  <%= f.text_field (:name) %>
+  <%= f.label :name %>
+  <%= f.text_field(:name) %>
   <%= f.submit('Enviar') %>
 <% end %>
