--- a/app/views/subsidiaries/_form.html.erb
+++ b/app/views/subsidiaries/_form.html.erb
@@ -10,11 +10,11 @@
 
 
 <%= form_for( @subsidiary , local: true) do |f| %>
-  <%= f.label :name, 'Nome:'%>
-  <%= f.text_field (:name) %>
-  <%= f.label :cnpj, 'CNPJ:'%>
+  <%= f.label :name %>
+  <%= f.text_field(:name) %>
+  <%= f.label :cnpj %>
   <%= f.text_field (:cnpj) %>
-  <%= f.label :address, 'Endereço:'%>
+  <%= f.label :address %>
   <%= f.text_field (:address) %>
   <%= f.submit('Enviar') %>
 <% end %>
