--- a/app/views/car_categories/show.html.erb
+++ b/app/views/car_categories/show.html.erb
@@ -2,7 +2,7 @@
 <h1> <%= @car_category.name %> </h1>
 <dl>
   <dt>Diária:</dt>
-  <dd> <%=  number_to_currency @car_category.daily_rate %> </dd>
+  <dd> <%=  @car_category.daily_rate %> </dd>
   <dt>Seguro:</dt>
   <dd> <%= number_to_currency @car_category.insurance%> </dd>
   <dt>Seguro para terceiros:<dt>
