--- a/app/views/car_models/index.html.erb
+++ b/app/views/car_models/index.html.erb
@@ -1,5 +1,7 @@
 <h6>HTML index</h6>
-
+<%if @car_models.empty? %>
+   <h3>Nenhum modelo de carro cadastrado </h3>
+<% end %>
 
 
 <h1>Modelos de Carros</h1>
@@ -15,10 +17,11 @@
   <% @car_models.each do |car_model| %>
     <tr>
       <td><%= car_model.manufacturer.name %></td>
-      <td><%= car_model.name %></td>
+      <td><%= link_to car_model.name, car_model_path(car_model) %></td>
       <td><%= car_model.car_category.name %></td>
     </tr>
   <% end %>
   </tbody>
 </table>
 <%= link_to 'Cadastrar novo modelo de carro', new_car_model_path %>
+<%= link_to  "Voltar", root_path %>
