--- a/app/views/car_models/_form.html.erb
+++ b/app/views/car_models/_form.html.erb
@@ -7,7 +7,7 @@
   <% end %>
 <% end %> 
 
-<%= form_with(model: @car_model) do |f| %>
+<%= form_with(model: @car_model, local:true) do |f| %>
   <div>
     <%= f.label :name %>
     <%= f.text_field :name %>
