--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,7 @@
 <%= link_to 'Filiais', subsidiaries_path %>
 <%= link_to 'Categorias carros', car_categories_path %>
 <%= link_to 'Clientes', customers_path %>
-<%= link_to'Modelos de Carros', car_models_path%>
+<%= link_to 'Modelos de Carros', car_models_path %>
+<%= link_to 'Locações', rentals_path %>
 
 <h5> <%= I18n.localize Time.now, format: :long %> </h5>
