Validações Clientes e modelos de carros

--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -12,9 +12,9 @@
     <dt> Categoria: </dt>
     <dd> <%= rental.car_category.name %> </dd>
     <dt> Data inicial: </dt>
-    <dd> <%= I18n.l rental.start_date %> </dd>
+    <dd> <%= rental.start_date %> </dd>
     <dt> Data final: </dt>
-    <dd> <%= I18n.l rental.end_date %> </dd>
+    <dd> <%= rental.end_date %> </dd>
   </dl>
 <% end %>    
 
