--- a/app/views/rentals/_form.html.erb
+++ b/app/views/rentals/_form.html.erb
@@ -1,27 +1,27 @@
 <h6>HTML form--new-edit</h6>
 
-
-
-
-
-
-
+<% if @rental.errors.full_messages.any? %>
+  <p>Não foi possível salvar, verifique os erros abaixo: </p>
+  <% @rental.errors.full_messages.each do |erro| %>
+    <p> <%= erro %> </p>
+  <% end %>
+<% end %> 
 
 <%= form_with(model: @rental, local:true ) do |f|%>
   <div>
-    <%= f.label :start_date, 'Data inicial'%>
+    <%= f.label :start_date %>
     <%= f.date_field :start_date %>
   </div>
   <div>  
-    <%= f.label :end_date, 'Data final'%>
+    <%= f.label :end_date %>
     <%= f.date_field :end_date %>
   </div>
   <div>
-    <%= f.label :car_category_id, 'Categoria' %>
+    <%= f.label :car_category_id %>
     <%= f.collection_select :car_category_id, @car_categories, :id, :name %>  
   </div>
   <div>
-    <%= f.label :customer_id, 'Cliente'%>
+    <%= f.label :customer_id %>
     <%= f.collection_select :customer_id, @customers, :id, :name %>
   </div>
   <%= f.submit 'Enviar' %>
