--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,5 +9,6 @@
 <%= link_to 'Clientes', customers_path %>
 <%= link_to 'Modelos de Carros', car_models_path %>
 <%= link_to 'Locações', rentals_path %>
+<%= link_to 'Carros', cars_path %>
 
 <h5> <%= I18n.localize Time.now, format: :long %> </h5>
