--- a/app/views/car_models/index.html.erb
+++ b/app/views/car_models/index.html.erb
@@ -4,13 +4,13 @@
 <% end %>
 
 
-<h1>Modelos de Carros</h1>
+<h1> <%= CarModel.human_attribute_name(:car_model) %> </h1>
 <table>
   <thead>
     <tr>
-      <th>Fabricante</th>
-      <th>Nome</th>
-      <th>Categoria</th>
+      <th> <%= CarModel.human_attribute_name(:manufacturer) %> </th>
+      <th> <%= CarModel.human_attribute_name(:name) %> </th>
+      <th> <%= CarModel.human_attribute_name(:category) %> </th>
     </tr>
   </thead>
   <tbody>
