--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -1,21 +1,28 @@
 <h6>HTML form New-Edit</h6>
 
+<%if @car.errors.full_messages.any? %>
+  <p>Não foi possível salvar, verifique os erros abaixo: </p>
+  <% @car.errors.full_messages.each do |erro|%>
+    <p> <%= erro %>  </p>
+  <% end %>
+  <% end %>
+
 
 <%= form_with(model: @car, local:true ) do |f| %>
   <div>
-    <%= f.label :license_plate, 'Placa' %>
+    <%= f.label :license_plate %>
     <%= f.text_field :license_plate%>
   </div>
   <div>
-    <%= f.label :color, 'Cor' %>
+    <%= f.label :color %>
     <%= f.text_field :color %>
   </div> 
   <div>
-    <%= f.label :mileage, 'Quilometragem' %>
+    <%= f.label :mileage %>
     <%= f.number_field :mileage%>
   </div> 
   <div>
-    <%= f.label :car_model_id, 'Modelo do carro'%>
+    <%= f.label :car_model_id%>
     <%= f.collection_select :car_model_id, CarModel.all, :id, :name %>
   </div>
   <%= f.submit 'Enviar' %> 
