--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,9 @@
+<%= flash[:notice] %>
 <h1>Rental Cars</h1>
-
 
 <p>Bem vindo ao sistema de gestão de locação</p>
 
+<%= link_to 'Entrar', new_user_session_path %>
 <%= link_to 'Fabricantes', manufacturers_path %>
 <%= link_to 'Filiais', subsidiaries_path %>
 <%= link_to 'Categorias carros', car_categories_path %>
@@ -10,5 +11,4 @@
 <%= link_to 'Modelos de Carros', car_models_path %>
 <%= link_to 'Locações', rentals_path %>
 <%= link_to 'Carros', cars_path %>
-
 <h5> <%= I18n.localize Time.now, format: :long %> </h5>
