--- a/app/views/subsidiaries/show.html.erb
+++ b/app/views/subsidiaries/show.html.erb
@@ -1,11 +1,11 @@
 <h6>HTML show</h6>
 
 <dl>
-  <dt> Nome: </dt>
+  <dt> <%= Subsidiary.human_attribute_name(:name) %> </dt>
   <dd> <%= @subsidiary.name %> </dd>
-  <dt> CNPJ: </dt>
+  <dt> <%= Subsidiary.human_attribute_name(:cnpj) %> </dt>
   <dd> <%= @subsidiary.cnpj %> </dd>
-  <dt> Endereço: </dt>
+  <dt> <%= Subsidiary.human_attribute_name(:address) %> </dt>
   <dd> <%= @subsidiary.address %> </dd>
 </dl>  
 
