Validações Carros, locações

--- a/app/views/car_models/new.html.erb
+++ b/app/views/car_models/new.html.erb
@@ -1,4 +1,4 @@
 <h6>HTML new</h6>
 <h1>Cadastrar Modelo de Carro</h6>
 
-<%= render partial: "form", locals: {car_model: @car_model} %>
+<%= render "form" %>
