--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,4 +1,4 @@
 <h6>HTML new </h6>
 <h1>Cadastrar novo cliente</h1>
 
-<%= render partial: 'form', locals: {customer: @customer}%>
+<%= render 'form' %>
