--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,4 +1,4 @@
-<h6>HTML new</html>
+<h6>HTML new</h6>
 <h1>Registar nova locação</h1>
 
-<%= render partial: "form", locals: {rental: @rental} %>
+<%= render "form" %>
