--- a/app/views/subsidiaries/new.html.erb
+++ b/app/views/subsidiaries/new.html.erb
@@ -1,4 +1,4 @@
 <h6>HTML new</h6>
 <h1>Cadastrar nova filial</h1>
 
-<%= render partial: 'form', locals: {subsidiary: @subsidiary}%>
+<%= render 'form' %>
