--- a/app/views/rentals/show.html.erb
+++ b/app/views/rentals/show.html.erb
@@ -2,6 +2,8 @@
 
 <h1> <%= @rental.customer.identification %>
 <dl>
+  <dt>Código:</dt>
+  <dd> <%= @rental.code %>
   <dt> <%= Rental.human_attribute_name(:start_date) %> </dt>
   <dd> <%= l @rental.start_date, format: :default  %> </dd>
   <dt> <%= Rental.human_attribute_name(:end_date)%> </dt>
