--- a/app/views/rentals/show.html.erb
+++ b/app/views/rentals/show.html.erb
@@ -10,6 +10,10 @@
   <dd> <%= l @rental.end_date, format: :default  %> </dd>
   <dt> <%= Rental.human_attribute_name(:car_category)%> </dt>
   <dd> <%=  @rental.car_category.name %>
+   <dt> status </dt>
+  <dd> <%=  t @rental.status %> </dd>
+  <br>
+  <%= link_to 'Iniciar Locação', start_rental_path(@rental.id) %> 
 <dl>
 
 <%= link_to "Voltar", rentals_path %>
