--- a/app/views/rentals/start.html.erb
+++ b/app/views/rentals/start.html.erb
@@ -8,9 +8,16 @@
   <dd><%= @rental.car_category.name %></dd>
 </dl>
 
+<h2>Acessórios</h2>
+<% @add_ons.each do |add_on| %>
+  <% add_on.name %>
+<% end %>  
 
-<%= form_tag(start_rental_path) do |f| %>
-  <%= label_tag :car_id, "Carro" %>
-  <%= select_tag :car_id, options_from_collection_for_select(@available_cars, :id, :description) %>
-  <%= submit_tag 'Confirmar'%>
+
+<%= form_with(model: @car_rental, local:true ) do |f| %>
+  <%= f.hidden_field :rental_id, value: @rental.id %>
+  <%= f.label :car_id  %>
+  <%= f.collection_select :car_id, @available_cars, :id, :description %>
+  <%= f.collection_check_boxes :add_on_ids, @add_ons, :id, :name %>
+  <%= f.submit "Confirmar"%>
 <% end %>
